--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,12 @@
   "author": "Justin Looi",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.6.3",
+    "mongodb": "^5.8.0",
+    "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.3"
   }
 }
