--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
     "mongodb": "^5.8.0",
     "mongodb-memory-server": "^8.15.1",
     "mongoose": "^7.4.3"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
